fix: increase z-index for search results

--- a/static/styles.css
+++ b/static/styles.css
@@ -243,6 +243,7 @@ li {
 .search-results {
     padding: 1rem;
     top: 72px;
+    z-index: 100;
 }
 
 .container {
